<resources>
    <string name="app_name">ETS</string>
    <string name="admin_work">Admin Home</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="navigation_drawer_items_array_admin">
        <item>Home</item>
        <item>Add Activity</item>
        <item>Add Project</item>
        <item>Add Task</item>
        <item>Add Measurable</item>
        <item>Add Other Activity</item>
        <item>Report Generation</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="navigation_drawer_items_array">
        <item>Daily Time Share</item>
        <item>DTS View</item>
        <item>Received Tasks</item>
        <item>Committed Tasks</item>
        <item>Approval Completion Tasks</item>
        <item>Work Done Status</item>
        <item>Assign Task</item>
        <item>Assigned Tasks</item>
        <item>Accepted Tasks</item>
        <item>Completed Tasks</item>
        <item>Modification Tasks</item>
        <item>Task Admin</item>

    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="submit">Submit</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="submit_button">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="add_measurables">Add measurables</string>
    <string name="unit">Unit</string>
    <string name="qty">Qty</string>
    <string name="enter_activity_name">Enter Activity Name</string>
    <string name="enter_project_name">Enter Project Name</string>
    <string name="project_no">Project No</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="enter_e_mail">Enter E-Mail</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="daily_time_share">Daily Time Share</string>
    <string name="dts_view">DTS View</string>
    <string name="received_tasks">Received Tasks</string>
    <string name="committed_tasks">Committed Tasks</string>
    <string name="approval_completion_tasks">Approval Completion Tasks</string>
    <string name="work_done_status">Work Done Status</string>
    <string name="assign_task">Assign Task</string>
    <string name="assigned_tasks">Assigned Tasks</string>
    <string name="accepted_tasks">Accepted Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="modification_tasks">Modification Tasks</string>
    <string name="task_to_learner">Task To Learner</string>
    <string name="task_admin">Task Admin</string>
    <string name="learner_tasks">Learner Tasks</string>
    <string name="user">User</string>
    <string name="date">Date</string>
    <string name="task">Task</string>
    <string name="text_to_user">To, %1$s</string>
    <string name="text_from_user">"From, %1$s "</string>
    <string name="button_approve_request">Approve Request</string>
    <string name="button_check_approve_task">Check Approve Task</string>
    <string name="button_complete">Complete</string>

    <string name="text_empty_response">Empty Response</string>
    <string name="text_success">Success</string>
    <string name="text_apiResponse">API Response</string>
    <string name="text_exception_occurred_while_getting_timeshares_due_to">Exception occurred while getting timeshares due to</string>
    <string name="text_response">Response</string>
    <string name="text_log">Log</string>
    <string name="text_request_failed_due_to">">"Request failed due to "</string>
    <string name="role_mentor">ROLE_MENTOR</string>
    <string name="role_learner">ROLE_LEARNER</string>
    <string name="role_admin">ROLE_ADMIN</string>
    <string name="text_something_went_wrong">Something went wrong!</string>
    <string name="text_failure">Failure : </string>
    <string name="task_id">">task_id</string>
    <string name="text_add_the_timeshare_as_you_dont_have_timeshares">add the timeshare as you don\'t have timeshares</string>
    <string name="registration">Registration</string>
    <string name="learner_assigned_tasks">LearnerAssignedTask</string>
</resources>
