<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">






    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_daily_time_share"
            android:title="@string/daily_time_share" />
        <item android:id="@+id/nav_dts_view"
            android:title="@string/dts_view"/>
        <item android:id="@+id/nav_received_tasks"
            android:title="@string/received_tasks"/>
        <item android:id="@+id/nav_committed_tasks"
            android:title="@string/committed_tasks" />
        <item android:id="@+id/nav_approval_completion_tasks"
            android:title="@string/approval_completion_tasks" />
        <item android:id="@+id/nav_work_done_status"
            android:title="@string/work_done_status" />
        <item android:id="@+id/nav_assign_task"
            android:title="@string/assign_task" />
        <item android:id="@+id/nav_assigned_tasks"
            android:title="@string/assigned_tasks" />
        <item android:id="@+id/nav_accepted_tasks"
            android:title="@string/accepted_tasks" />
        <item android:id="@+id/nav_completed_tasks"
            android:title="@string/completed_tasks" />
        <item android:id="@+id/nav_modified_tasks"
            android:title="@string/modification_tasks" />
        <item android:id="@+id/nav_task_admin"
            android:title="@string/task_admin" />
        <item android:id="@+id/nav_task_to_learner"
            android:title="@string/task_to_learner" />

        <item android:id="@+id/nav_learner_tasks"
            android:title="@string/learner_tasks" />

        <item android:id="@+id/nav_learner_assigned_tasks"
            android:title="@string/learner_assigned_tasks" />

        <item android:id="@+id/nav_learner_accepted_tasks"
            android:title="Learner Accepted Tasks" />

    </group>
</menu>
