<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout12"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TTSTaskCompletedListFragment">


    <TextView
        android:id="@+id/textViewCompletedListUser"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textViewCompletedListDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/textViewCompletedListDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="end"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewCompletedListUser"
        app:layout_constraintTop_toTopOf="@+id/textViewCompletedListUser"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/textViewCompletedListTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="end"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewCompletedListTask"
        app:layout_constraintEnd_toEndOf="@+id/textViewCompletedListDate"
        app:layout_constraintStart_toStartOf="@+id/textViewCompletedListDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewCompletedListDate"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.45" />


    <TextView
        android:id="@+id/textViewCompletedListTaskUser"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/user"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textViewCompletedListTaskDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCompletedListUser"
        app:layout_constraintWidth_percent="0.20" />

    <TextView
        android:id="@+id/textViewCompletedListTaskDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/date"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textViewCompletedListTask"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewCompletedListTaskUser"
        app:layout_constraintTop_toBottomOf="@id/textViewCompletedListUser"
        app:layout_constraintWidth_percent="0.20" />

    <TextView
        android:id="@+id/textViewCompletedListTask"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/task"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textViewCompletedListStatus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewCompletedListTaskDate"
        app:layout_constraintTop_toBottomOf="@id/textViewCompletedListTime"
        app:layout_constraintWidth_percent="0.40" />

    <TextView
        android:id="@+id/textViewCompletedListStatus"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="Status"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewCompletedListTask"
        app:layout_constraintTop_toBottomOf="@id/textViewCompletedListTime"
        app:layout_constraintWidth_percent="0.20" />


<!--    <ListView-->
<!--        android:id="@+id/listCompleted"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/textViewCompletedListTask"-->
<!--        app:layout_constraintWidth_percent="0.65" />-->

    <TextView
        android:id="@+id/completedTasksState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="No completed task available!"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCompletedListTask" />




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTaskCompleted"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/textViewCompletedListTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>